8353202: [lworld] TestArrays.java crashes with -XX:+UseNullableValueFlattening